# rmt_ao3_rss_reader

./: .dockerignore  .gitignore  Dockerfile  Makefile  RAILWAY_DEPLOYMENT.md  README.md  bot.py  config.py  docker.env.example  main.py  pyproject.toml  rss_parser.py  run_bot.py  telegram_bot.py  test_bot.py
rss_parser/: __init__.py  rss_parser.py
scripts/: dev.sh  docker-simple.sh  format.sh  setup.sh
telegram_bot/: bot.py  run_bot.py  telegram_bot.py  test_bot.py
utils/: redis_connector.py  schemas.py
